# detectron2-nix

./: README.md  default.nix  pyproject.toml
nix/: sources.json
