[tool.poetry]
name = "fasterrcnn"
version = "0.1.0"
description = ""
authors = ["Junji Hashimoto <junji.hashimoto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fvcore = "^0.1.5"
tensorboard = "^2.6.0"
cmake = "^3.21.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
detectron2 = {url = "https://dl.fbaipublicfiles.com/detectron2/wheels/cu111/torch1.9/detectron2-0.5%2Bcu111-cp38-cp38-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["torch>=1.9.0", "poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
build-backend = "setuptools.build_meta:__legacy__"
